2001-04-03  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-account.c: add opening balance support

	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): new func.
	(gnc_account_create_opening_balance): new func.

	* src/gnome/gnc-dateedit.c: add some error checking

	* src/gnome/gnc-commodity-edit.c: add "changed" signal

	* src/scm/report/register.scm: fix bug

2001-04-03  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/html-table.scm (gnc:html-table-prepend-row!): Fix
	bug.

	* src/scm/report/html-utilities.scm (gnc:build-html-acct-table): Add
	show-col-headers option.

	* src/scm/report/balance-sheet.scm: New file.  Code for a balance
	sheet report.  Numbers should be correct, presentation is
	rudimentary as usual.

	* src/scm/report/account-summary.scm: modify for changed arguments
	to gnc:build-html-acct-table.

	* src/scm/report/pnl.scm: modify for changed arguments to
	gnc:build-html-account-table.
	
2001-04-02  Dave Peticolas  <dave@krondo.com>

	* Makefile.am: add po/README

	* src/gnome/window-main.c: hide developer menu

	* src/gnome/window-register.c: add invoice menu item

	* src/scm/prefs.scm: add user name & address option for invoice
	report. add option for whether reports appear in main window or
	open in new window

	* src/scm/report.scm: open reports based on new option

	* src/scm/report/transaction-report.scm: more work

	* src/scm/report/register.scm: more work

2001-04-01  Dave Peticolas  <dave@krondo.com>

	* src/FileDialog.c: update for api change

	* src/gnome/window-report.c: update for api change

	* src/gnome/gnc-html.c: update for api change

	* src/gnome/window-main.c: update for api change

	* src/gnome/cursors.c (gnc_set_busy_cursor): add extra arg
	to determine whether to update cursor immediately

	* src/gnome/druid-qif-import.c: update for api change

	* src/gnome/window-help.c: expand the top nodes initially
	(gnc_help_show_topic): show the topic in the tree when it
	can be found
